@@ -161,6 +161,12 @@
 				<code>org.eclipse.sirius.tests.swtbot.support.api.editor.SWTBotSiriusHelper.getShellBot(String)</code> has been added and allows to retrieve a bot related to a shell with the given label.
 			</li>
 		</ul>
+		<ul>
+			<li><span class="label label-success">Added</span>The method 
+				<code>org.eclipse.sirius.tests.swtbot.support.api.editor.SWTBotSiriusHelper.menu(SWTBot, String)</code> has been added and allows to retrieve a menu even when the active shell is null. Should be used over 
+				<code>SWTBot.menu(String)</code> method.
+			</li>
+		</ul>
 		<h2 id="sirius6.2.0">Changes in Sirius 6.2.0</h2>
 		<h3 id="UserVisibleChanges">User-Visible Changes</h3>
 		<ul>
